--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python-dotenv = "^1.0.1"
 langchain = "^0.1.9"
 langchain-openai = "^0.0.5"
 chromadb = "^0.4.22"
-tiktoken = "^0.6.0"
+tiktoken = ">=0.5.2,<0.6.0"
 
 
 [build-system]
