--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4.0"
+flask = "^3.0.0"
 openai = "^1.12.0"
 python-dotenv = "^1.0.1"
 langchain = "^0.1.9"
