--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ langchain = "^0.1.9"
 langchain-openai = "^0.0.5"
 chromadb = "^0.4.22"
 tiktoken = ">=0.5.2,<0.6.0"
+boto3 = "^1.34.7"
+werkzeug = "^3.0.1"
+botocore = "^1.34.7"
 
 
 [build-system]
