--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,15 @@ tiktoken = ">=0.5.2,<0.6.0"
 boto3 = "^1.34.7"
 werkzeug = "^3.0.1"
 botocore = "^1.34.7"
+requests = "^2.31.0"
+pillow = "^10.1.0"
+python-magic = "^0.4.27"
+gunicorn = "^21.2.0"
+flask-cors = "^4.0.0"
+b2sdk = "^1.23.0"
+wasabi = "^1.1.2"
+google-cloud-storage = "^2.14.0"
+google-auth = "^2.27.0"
 
 [build-system]
 requires = ["poetry-core"]
