--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 six==1.16.0
-urllib3==2.0.7 
+urllib3==2.0.7
+b2sdk==1.23.0
+wasabi==1.1.2
+google-cloud-storage==2.14.0
+google-auth==2.27.0 
