--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ b2sdk = "^1.23.0"
 wasabi = "^1.1.2"
 google-cloud-storage = "^2.14.0"
 google-auth = "^2.27.0"
+flask-wtf = "^1.2.1"
+wtforms = "^3.1.1"
 
 [build-system]
 requires = ["poetry-core"]
